--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "test": "NODE_ENV=test mocha"
+    "test": "NODE_ENV=test istanbul cover _mocha -- test/ -R spec"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
     "express-breadcrumbs": "0.0.2",
@@ -31,7 +32,8 @@
     "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
     "gulp-sass": "^2.0.4",
+    "istanbul": "^0.4.2",
     "mocha": "^2.4.5",
-    "should": "^8.2.2"
+    "supertest": "^1.2.0"
   }
 }
